2022. 9. 6. Corrected field designators to the up-to-date style. [dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_lin, dz_sys_tf, dz_sys_filt_maf, dz_sys_filt_bw, dz_sys_fg]
2022. 9. 5. Debugged return type of _dzSysTFPrmAlloc. [dz_sys_tf]
2022. 9. 5. Added explicit castings of utility void pointers. [dz_lin, dz_sys, dz_sys_lin, dz_sys_tf, dz_sys_filt_bw, dz_ident_lag]
2022. 9. 5. Corrected arithmetic of signed integer values. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc, dz_sys_filt_bw]
2022. 9. 4. Removed register keywords. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc, dz_sys_tf, dz_sys_filt_bw, dz_ident_lag]
2021.11. 3. Added dzco.h. [dzco]
2021.11. 3. Debugged some example codes. [example]
2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
2021. 6. 1. Modified allclean.sh in example to skip directories without makefile. [example]
2021. 5.30. Applied zeda-deb-gen. [makefile]
2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 7. Made tools/, and modified makefiles. [dzco, app, tools]
2021. 4.29. Modified app/makefile. [app]
2021. 4.29. Reflected new specification of zeda-config-gen. [app]
2021. 3.31. Reflect modification of ZEDA and abolished *RegZTK. [dz_tf, dz_lin, dz_sys*]
2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
2020.11. 8. Modified lqr_test in example and lin_test in test. [example, test]
2020. 5.12. Reflect new specification of zOptSolveNM. [dz_ident_lag]
2020. 4. 3. Debugged dz_tf2zeropole conforming to new specification of dzTF. [app]
2019.11.27. Reimplemented dzFreqResFromTF. [dz_tf_fr]
2019.11.27. Modified specification of dzTFZeroPole. [dz_tf]
2019.11.27. Added zero and pole members to dzTF class and modified some related functions. [dz_tf]
2019.11.27. Modified dzTFInit. [dz_tf]
2019.11.27. Modified dzTFCreateZeroPole to accept gain. [dz_tf]
2019.11.22. Rewrote README as a markdown file. [README]
2019.10. 7. Debugged _dzTFGainFromZTK. [dz_tf]