@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.9
+VERSION=1.4.10
 
-DEPENDENCY="zeda=1.6.29;zm=1.4.10"
+DEPENDENCY="zeda=1.6.36;zm=1.5.1"
