@@ -14,7 +14,7 @@ __BEGIN_DECLS
 /*! \brief auto prototype generator */
 #define dzSysFGPrototype(Type,mtype) \
 __EXPORT dzSys *dzSys##Type##Create(dzSys *sys, double amp, double delay, double period);\
-extern dzSysCom dz_sys_##mtype##_com
+__EXPORT dzSysCom dz_sys_##mtype##_com
 
 /*! \brief auto definition generator */
 #define dzSysFGDefine(Type,mtype) \
